--- a/facebook-common/build.gradle
+++ b/facebook-common/build.gradle
@@ -31,10 +31,12 @@ dependencies {
     // Facebook Dependencies
     api project(':facebook-core')
     // Support Dependencies
-    api "com.android.support:support-v4:${project.ext.supportLibraryVersion}"
-    implementation "com.android.support:appcompat-v7:${project.ext.supportLibraryVersion}"
-    implementation "com.android.support:cardview-v7:${project.ext.supportLibraryVersion}"
-    implementation "com.android.support:customtabs:${project.ext.supportLibraryVersion}"
+//    api "com.android.support:support-v4:${project.ext.supportLibraryVersion}"
+//    implementation "com.android.support:appcompat-v7:${project.ext.supportLibraryVersion}"
+//    implementation "com.android.support:cardview-v7:${project.ext.supportLibraryVersion}"
+//    implementation "com.android.support:customtabs:${project.ext.supportLibraryVersion}"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     // Third-party Dependencies
     implementation 'com.google.zxing:core:3.3.3'
 }
